# cmahome

./: .ocamlformat  README.md  bun.lockb  cmahome.opam  dune  dune-project  index.html  package.json  tailwind.config.js
src/: App.re  HomePage.re  dune
src/cma_configuration/: dune
src/components/: Configuration.re  Footer.re  Header.re  Sidebar.re  components.re
src/pages/: dune  pages.re
src/pages/Home/: About.re  Hero.re  dune  home.re
